tooling/nargo_cli/tests/snapshots/execution_success/loop_invariant_nested_deep/execute__tests__expanded.snap
---
source: tooling/nargo_cli/tests/execute.rs
expression: expanded_code
---
fn main(a: pub bool) {
    for _ in 0..1 {
        for _ in 0..1 {
            for _ in 0..1 {
                for _ in 0..1 {
                    if a {
                        for _ in 0..1 {
                            let _: Field = 1 / (a as Field);
                        }
                    };
                }
            }
        }
    }
    for _ in 0..1 {
        if a {
            for _ in 0..1 {
                let _: Field = 1 / (a as Field);
                for _ in 0..1 {
                    for _ in 0..1 {
                        for _ in 0..1 {
                            let _: Field = 1 / (a as Field);
                        }
                    }
                }
            }
        }
    }
    for _ in 0..1 {
        for _ in 0..1 {
            for _ in 0..1 {
                if a {
                    for _ in 0..1 {
                        let _: Field = 1 / (a as Field);
                        for _ in 0..1 {
                            let _: Field = 1 / (a as Field);
                        }
                    }
                }
            }
        }
    }
}
