tooling/nargo_cli/tests/snapshots/execution_success/loop_invariant_nested_deep/execute__tests__force_brillig_false_inliner_9223372036854775807.snap
---
source: tooling/nargo_cli/tests/execute.rs
expression: artifact
---
{
  "noir_version": "[noir_version]",
  "hash": "[hash]",
  "abi": {
    "parameters": [
      {
        "name": "a",
        "type": {
          "kind": "boolean"
        },
        "visibility": "public"
      }
    ],
    "return_type": null,
    "error_types": {}
  },
  "bytecode": [
    "func 0",
    "current witness index : _2",
    "private parameters indices : []",
    "public parameters indices : [_0]",
    "return value indices : []",
    "BLACKBOX::RANGE [_0]:1 bits []",
    "BRILLIG CALL func 0: PREDICATE: EXPR [ (1, _0) 0 ]",
    "inputs: [EXPR [ (1, _0) 0 ]], outputs: [_1]",
    "EXPR [ (1, _0, _1) (-1, _2) 0 ]",
    "EXPR [ (1, _0, _2) (-1, _0) 0 ]",
    "unconstrained func 0",
    "[Const { destination: Direct(21), bit_size: Integer(U32), value: 1 }, Const { destination: Direct(20), bit_size: Integer(U32), value: 0 }, CalldataCopy { destination_address: Direct(0), size_address: Direct(21), offset_address: Direct(20) }, Const { destination: Direct(2), bit_size: Field, value: 0 }, BinaryFieldOp { destination: Direct(3), op: Equals, lhs: Direct(0), rhs: Direct(2) }, JumpIf { condition: Direct(3), location: 8 }, Const { destination: Direct(1), bit_size: Field, value: 1 }, BinaryFieldOp { destination: Direct(0), op: Div, lhs: Direct(1), rhs: Direct(0) }, Stop { return_data: HeapVector { pointer: Direct(20), size: Direct(21) } }]"
  ],
  "debug_symbols": "jZDdCoMwDIXfJde9UPfD5quMIVWjFEJbYjsY4rsvFnV6MdhN0uT0O6VnhBbr2FfGdm6A8jFCzYbI9BW5RgfjrGzHScE6VoERZQU7XSivGW2A0kYiBS9NMV0avLapB82iZgrQttLFsDOE82lSXzr7jZ7u+QKfs3zDL//zt+vGFwf+KZNuDB9+DDmUhYIi1ZPUabZmo2vCJZEu2mYXUHj7VVkj9OwabCPjbJ00eewD",
  "file_map": {
    "50": {
      "source": "// We expect this program to fail if we incorrectly hoist the division.\n// This is an expansion of the `loop_invariant_regression_8586` test.\n// a = false\nfn main(a: pub bool) {\n    for _ in 0..1 {\n        for _ in 0..1 {\n            for _ in 0..1 {\n                for _ in 0..1 {\n                    if a {\n                        for _ in 0..1 {\n                            let _ = (1 / (a as Field));\n                        }\n                    };\n                }\n            }\n        }\n    }\n\n    for _ in 0..1 {\n        if a {\n            for _ in 0..1 {\n                let _ = (1 / (a as Field));\n\n                for _ in 0..1 {\n                    for _ in 0..1 {\n                        for _ in 0..1 {\n                            let _ = (1 / (a as Field));\n                        }\n                    }\n                }\n            }\n        }\n    }\n\n    for _ in 0..1 {\n        for _ in 0..1 {\n            for _ in 0..1 {\n                if a {\n                    for _ in 0..1 {\n                        let _ = (1 / (a as Field));\n\n                        for _ in 0..1 {\n                            let _ = (1 / (a as Field));\n                        }\n                    }\n                }\n            }\n        }\n    }\n}\n",
      "path": ""
    }
  },
  "expression_width": {
    "Bounded": {
      "width": 4
    }
  }
}
